fix first-line-of-code-block spacing issue

--- a/_source/css/code.css
+++ b/_source/css/code.css
@@ -16,9 +16,6 @@ div.highlighter-rouge {
 div.highlighter-rouge, code {
   border: 1px solid var(--text-normal-25);
   background-color: var(--text-normal-10);
-  padding: 1px 2px;
-  margin-left: .1rem;
-  margin-right: .1rem;
   border-radius: 2px;
 }
 
